--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile files('libs/httpmime-4.1.3.jar')
     compile files('libs/MobCommons-2016.0303.1229.jar')
     compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.android.support:design:23.+'
 }
