刘俊杰改变了续写内容布局

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,7 @@ repositories{
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.+'
-    compile 'com.android.support:appcompat-v7:23.+'
+    compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.facebook.fresco:fresco:0.10.0'
     compile 'com.android.support:cardview-v7:23.+'
@@ -36,7 +35,7 @@ dependencies {
     compile 'com.loopeer.android.thirdparty.pulltorefresh:Android-PullToRefresh:2.1.1'
     compile name:'SMSSDK-2.0.2',ext:'aar'
     compile name:'SMSSDKGUI-2.0.2',ext:'aar'
-    compile 'com.android.support:appcompat-v7:23.+'
+
     compile files('libs/umeng_social_sdk.jar')
     compile files('libs/SocialSDK_Sina.jar')
     compile files('libs/SocialSDK_QQZone_3.jar')
