新添加了一个查看续写页面，并从后台获取了数据

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity android:name=".activity.Article_ReadActivity" />
         <activity android:name=".activity.LoginActivity" />
@@ -94,7 +95,9 @@
             android:name="UMENG_APPKEY"
             android:value="573329d1e0f55aea7500430f" />
 
-        <activity android:name=".activity.Write_ReadActivity"></activity>
+        <activity android:name=".activity.Write_ReadActivity">
+
+        </activity>
     </application>
 
 </manifest>
