--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,26 +36,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-<<<<<<< HEAD
 
-=======
-<<<<<<< HEAD
         <activity android:name=".activity.MainActivity"></activity>
-=======
->>>>>>> a4904fc3aebcfe5d3f3106fbd0f9c8cc1554a62d
-        <activity android:name=".activity.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            <!-- 记得把主函数改过来 -->
-        </activity>
-<<<<<<< HEAD
-
-=======
->>>>>>> db59871c633148284d7daa630ffb1dba54653085
->>>>>>> a4904fc3aebcfe5d3f3106fbd0f9c8cc1554a62d
         <activity android:name=".activity.Article_ReadActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.ProtocolActivity" />
@@ -64,7 +46,6 @@
         <activity android:name=".activity.SuccessActivity" />
         <!-- 排行榜页面 RankActivity -->
         <activity android:name=".activity.RankActivity" />
-
         <!-- 投票页面VoteActivity -->
         <activity android:name=".activity.VoteActivity" />
         <activity
@@ -106,27 +87,12 @@
         <meta-data
             android:name="UMENG_APPKEY"
             android:value="573329d1e0f55aea7500430f" />
-<<<<<<< HEAD
 
         <activity android:name=".activity.CenterActivity"></activity>
-
-
-
-        <activity android:name=".activity.ThemeActivity">
-        </activity>
         <activity android:name=".activity.Write_ReadActivity" />
         <activity android:name=".activity.ThemeContentActivity"></activity>
 
 
-
-=======
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-        <activity android:name=".activity.CenterActivity"></activity>
-=======
-
-<<<<<<< HEAD
         <activity android:name=".activity.ThemeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -134,51 +100,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.Write_ReadActivity" />
-        <activity android:name=".activity.ThemeContentActivity"></activity>
-=======
-<<<<<<< HEAD
-
-=======
-<<<<<<< HEAD
-        <activity android:name=".activity.Write_ReadActivity">
->>>>>>> 66e0b4df9dfbe5b11049ac577a09b375ab87e1ef
-
-        <activity android:name=".activity.CenterActivity"></activity>
-        <activity android:name=".activity.Write_ReadActivity" />
->>>>>>> a4904fc3aebcfe5d3f3106fbd0f9c8cc1554a62d
-        <activity android:name=".activity.AndWriteContent_Activity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-<<<<<<< HEAD
-=======
 
 
-        x
+        <activity android:name=".activity.AndWriteContent_Activity"></activity>
 
 
-
-        <activity android:name=".activity.ThemeActivity">
-        </activity>
-
-
-
-<<<<<<< HEAD
-=======
-=======
->>>>>>> d3c0fd6047d0f6bf84f1f9e174754d9e321b6bf4
->>>>>>> a1366b9838d5ec1ce1f063796b4aa20538d84ffd
->>>>>>> 198933d18b88973024f8dd14f00608c73ffaf18c
->>>>>>> 78d805572bb8e68acdd3e50d1c6f3cff93ac58c7
->>>>>>> d98bb64e77438e7f978bfbee0162b58bea256679
->>>>>>> a3d05d6abd99792b61460fa4c6397014d9819c29
->>>>>>> db59871c633148284d7daa630ffb1dba54653085
->>>>>>> 66e0b4df9dfbe5b11049ac577a09b375ab87e1ef
->>>>>>> a4904fc3aebcfe5d3f3106fbd0f9c8cc1554a62d
     </application>
 
 </manifest>
