--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,8 @@ dependencies {
     compile 'org.xutils:xutils:3.3.34'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.loopeer.android.thirdparty.pulltorefresh:Android-PullToRefresh:2.1.1'
-    compile name:'SMSSDK-2.0.2',ext:'aar'
-    compile name:'SMSSDKGUI-2.0.2',ext:'aar'
-
+    compile name: 'SMSSDK-2.0.2', ext: 'aar'
+    compile name: 'SMSSDKGUI-2.0.2', ext: 'aar'
     compile files('libs/umeng_social_sdk.jar')
     compile files('libs/SocialSDK_Sina.jar')
     compile files('libs/SocialSDK_QQZone_3.jar')
@@ -45,5 +44,7 @@ dependencies {
     compile files('libs/httpmime-4.1.3.jar')
     compile files('libs/MobCommons-2016.0303.1229.jar')
     compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.android.support:recyclerview-v7:23.0.3@aar'
     compile 'com.android.support:design:23.+'
+    compile files('libs/BmobPay_v2.7_160427.jar')
 }
