--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,8 +36,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".activity.MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-        <activity android:name=".activity.MainActivity"></activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".activity.Article_ReadActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.ProtocolActivity" />
@@ -88,22 +93,12 @@
             android:name="UMENG_APPKEY"
             android:value="573329d1e0f55aea7500430f" />
 
-        <activity android:name=".activity.CenterActivity"></activity>
+        <activity android:name=".activity.CenterActivity" />
         <activity android:name=".activity.Write_ReadActivity" />
-        <activity android:name=".activity.ThemeContentActivity"></activity>
-
-
+        <activity android:name=".activity.ThemeContentActivity" />
         <activity android:name=".activity.ThemeActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-
-
-        <activity android:name=".activity.AndWriteContent_Activity"></activity>
-
+        <activity android:name=".activity.AndWriteContent_Activity" />
 
     </application>
 
