--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.acer.zzia_mxbt"
     android:versionCode="205"
-    android:versionName="2.0.5"
-    >
-    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="23" />
+    android:versionName="2.0.5">
+
+    <uses-sdk
+        android:minSdkVersion="11"
+        android:targetSdkVersion="23" />
     <!-- Required 自定义用来收发消息的相关权限 -->
     <permission
         android:name="com.example.acer.zzia_mxbt.permission.JPUSH_MESSAGE"
         android:protectionLevel="signature" />
 
-    <!-- Required 一些系统要求的权限，如访问网络等-->
+    <!-- Required 一些系统要求的权限，如访问网络等 -->
     <uses-permission android:name="com.example.acer.zzia_mxbt.permission.JPUSH_MESSAGE" />
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -24,7 +26,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
-
     <!-- Optional for location -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
@@ -32,8 +33,7 @@
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 
-
-    <!--第三方支付的权限-->
+    <!-- 第三方支付的权限 -->
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
     <!-- Mob网络权限 -->
@@ -41,7 +41,8 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.GET_TASKS" />
     <!-- 友盟要求 -->
-<<<<<<< HEAD
+
+
     <!-- ###################声明SDK使用的相关权限###################### -->
     <!-- 检测网络状态 -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -58,9 +59,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <!--分享权限-->
-=======
->>>>>>> 42c3d4d3b7d314f110699972472a68eb9d124c62
+    <!-- 分享权限 -->
 
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -69,11 +68,12 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <!-- 蓝牙分享所需的权限 -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
     <application
         android:name=".application.MyApplication"
         android:allowBackup="true"
@@ -81,28 +81,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-<<<<<<< HEAD
-=======
-        <activity android:name=".activity.MainActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
->>>>>>> ee39f3392c57094014cb703193776a99a327c2c7
-        <activity android:name=".activity.MainActivity">
-
-<<<<<<< HEAD
-            <!-- 记得把主函数改过来 -->
-=======
->>>>>>> 363cb125c3016c0ce9f7095c6240069116ad0158
->>>>>>> a014e8143a6f2e2f5edd551526ab687862d6e20d
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
->>>>>>> 42c3d4d3b7d314f110699972472a68eb9d124c62
-        </activity>
+        <activity android:name=".activity.MainActivity"></activity>
         <activity android:name=".activity.Article_ReadActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.ProtocolActivity" />
@@ -113,11 +92,13 @@
         <activity android:name=".activity.RankActivity" />
         <!-- 投票页面VoteActivity -->
         <activity android:name=".activity.VoteActivity" />
-       <!-- <activity
+        <!--
+            <activity
             android:name="com.mob.tools.MobUIShell"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:windowSoftInputMode="stateHidden|adjustResize" />-->
+            android:windowSoftInputMode="stateHidden|adjustResize" />
+        -->
         <!-- ###################注册SDK使用的Activity###################### -->
         <!-- 分享编辑页 -->
         <activity
@@ -153,36 +134,21 @@
             android:name="UMENG_APPKEY"
             android:value="573329d1e0f55aea7500430f" />
 
-<<<<<<< HEAD
         <activity android:name=".activity.CenterActivity" />
-=======
-<<<<<<< HEAD
-
-=======
-<<<<<<< HEAD
-        <activity android:name=".activity.CenterActivity" />
-        <activity android:name=".activity.ThemeActivity"></activity>
->>>>>>> 42c3d4d3b7d314f110699972472a68eb9d124c62
         <activity android:name=".activity.Write_ReadActivity" />
         <activity android:name=".activity.ThemeContentActivity" />
-        <activity android:name=".activity.AndWriteContent_Activity">
-
-        </activity>
+        <activity android:name=".activity.AndWriteContent_Activity" />
         <activity android:name=".activity.ThemeActivity" />
-        <activity android:name=".activity.ArticleCommentActivity">
+        <activity android:name=".activity.ArticleCommentActivity" />
+        <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-=======
-<<<<<<< HEAD
-        <activity android:name=".activity.CenterActivity" />
-        <activity android:name=".activity.Write_ReadActivity" />
-        <activity android:name=".activity.ThemeContentActivity" />
-        <activity android:name=".activity.ThemeActivity">
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name=".activity.AndWriteContent_Activity" />
-=======
->>>>>>> a014e8143a6f2e2f5edd551526ab687862d6e20d
-        <!--第三方支付的activity-->
+        <activity android:name=".activity.GuideActivity" />
+        <!-- 第三方支付的activity -->
         <activity
             android:name="c.b.a.A"
             android:configChanges="orientation|keyboardHidden|navigation"
@@ -193,51 +159,37 @@
             android:name="c.b.a.B"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent" />
+        <activity android:name=".activity.WalletActivity" />
+        <activity android:name=".activity.EditActivity" />
 
-
-        <activity android:name=".activity.Write_ReadActivity" />
-        <activity android:name=".activity.AndWriteContent_Activity" />
-        <activity android:name=".activity.CenterActivity" />
-        <activity android:name=".activity.ThemeActivity"></activity>
-        <activity android:name=".activity.WalletActivity">
->>>>>>> ee39f3392c57094014cb703193776a99a327c2c7
-
-        </activity>
-<<<<<<< HEAD
-        <activity android:name=".activity.EditActivity"></activity>
-=======
-
-
-        <activity android:name=".activity.ThemeContentActivity"></activity>
-         <!--极光推送集成-->
-        <!-- Required SDK核心功能-->
+        <!-- 极光推送集成 -->
+        <!-- Required SDK核心功能 -->
         <activity
             android:name="cn.jpush.android.ui.PushActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:theme="@android:style/Theme.NoTitleBar"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="cn.jpush.android.ui.PushActivity" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="com.example.acer.zzia_mxbt" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.AndWriteCommentActivity">
+        <activity android:name=".activity.AndWriteCommentActivity" />
 
-<<<<<<< HEAD
-        </activity>
-
-        <!--分享添加-->
+        <!-- 分享添加 -->
         <activity
             android:name="com.mob.tools.MobUIShell"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustResize" >
-
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
                 <data android:scheme="tencent100371282" />
+
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
@@ -245,26 +197,26 @@
             <!-- 调用新浪原生SDK，需要注册的回调activity -->
             <intent-filter>
                 <action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
-        <!--微信分享回调 -->
+        <!-- 微信分享回调 -->
         <activity
             android:name="cn.sharesdk.demo.wxapi.WXEntryActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
-            android:screenOrientation="portrait" />
-=======
-        <!-- Required SDK核心功能-->
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
+        <!-- Required SDK核心功能 -->
         <service
             android:name="cn.jpush.android.service.DownloadService"
             android:enabled="true"
-            android:exported="false" >
-        </service>
+            android:exported="false" />
 
-        <!-- Required SDK 核心功能-->
+        <!-- Required SDK 核心功能 -->
         <!-- option since 2.0.5 可配置PushService，DaemonService,PushReceiver,AlarmReceiver的android:process参数 将JPush相关组件设置为一个独立进程 -->
         <!-- 如：android:process=":remote" -->
         <service
@@ -276,7 +228,6 @@
                 <action android:name="cn.jpush.android.intent.REPORT" />
                 <action android:name="cn.jpush.android.intent.PushService" />
                 <action android:name="cn.jpush.android.intent.PUSH_TIME" />
-
             </intent-filter>
         </service>
 
@@ -285,19 +236,21 @@
             android:name="cn.jpush.android.service.DaemonService"
             android:enabled="true"
             android:exported="true">
-            <intent-filter >
+            <intent-filter>
                 <action android:name="cn.jpush.android.intent.DaemonService" />
-                <category android:name="com.example.acer.zzia_mxbt"/>
+
+                <category android:name="com.example.acer.zzia_mxbt" />
             </intent-filter>
         </service>
 
-        <!-- Required SDK核心功能-->
+        <!-- Required SDK核心功能 -->
         <receiver
             android:name="cn.jpush.android.service.PushReceiver"
             android:enabled="true"
             android:exported="false">
             <intent-filter android:priority="1000">
-                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY" /> <!--Required 显示通知栏 -->
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY" />
+                <!-- Required 显示通知栏 -->
                 <category android:name="com.example.acer.zzia_mxbt" />
             </intent-filter>
             <intent-filter>
@@ -308,15 +261,17 @@
             <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_ADDED" />
                 <action android:name="android.intent.action.PACKAGE_REMOVED" />
+
                 <data android:scheme="package" />
             </intent-filter>
         </receiver>
 
-        <!-- Required SDK核心功能-->
+        <!-- Required SDK核心功能 -->
         <receiver android:name="cn.jpush.android.service.AlarmReceiver" />
 
-        <!-- User defined. 用户自定义的广播接收器-->
-      <!--  <receiver
+        <!-- User defined. 用户自定义的广播接收器 -->
+        <!--
+        <receiver
             android:name="您自己定义的Receiver"
             android:enabled="true">
             <intent-filter>
@@ -328,14 +283,20 @@
                 <action android:name="cn.jpush.android.intent.CONNECTION" />&lt;!&ndash; 接收网络变化 连接/断开 since 1.6.3 &ndash;&gt;
                 <category android:name="com.example.acer.zzia_mxbt" />
             </intent-filter>
-        </receiver>-->
+        </receiver>
+        -->
+
 
         <!-- Required . Enable it you can get statistics data with channel -->
-        <meta-data android:name="JPUSH_CHANNEL" android:value="developer-default"/>
-        <meta-data android:name="JPUSH_APPKEY" android:value="0df39e6620b17589afd021a6" /> <!-- </>值来自开发者平台取得的AppKey-->
+        <meta-data
+            android:name="JPUSH_CHANNEL"
+            android:value="developer-default" />
+        <meta-data
+            android:name="JPUSH_APPKEY"
+            android:value="0df39e6620b17589afd021a6" />
+        <!-- </>值来自开发者平台取得的AppKey -->
 
->>>>>>> ee39f3392c57094014cb703193776a99a327c2c7
->>>>>>> 42c3d4d3b7d314f110699972472a68eb9d124c62
+        <activity android:name=".activity.DownlineActivity"></activity>
     </application>
 
 </manifest>
