--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile name: 'SMSSDK-2.0.2', ext: 'aar'
     compile name: 'SMSSDKGUI-2.0.2', ext: 'aar'
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:23+'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.facebook.fresco:fresco:0.10.0'
@@ -42,11 +42,9 @@ dependencies {
     compile 'org.xutils:xutils:3.3.34'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.loopeer.android.thirdparty.pulltorefresh:Android-PullToRefresh:2.1.1'
-<<<<<<< HEAD
-    compile name: 'SMSSDK-2.0.2', ext: 'aar'
-    compile name: 'SMSSDKGUI-2.0.2', ext: 'aar'
-=======
->>>>>>> 42c3d4d3b7d314f110699972472a68eb9d124c62
+
+
+
     compile files('libs/umeng_social_sdk.jar')
     compile files('libs/SocialSDK_Sina.jar')
     compile files('libs/SocialSDK_QQZone_3.jar')
@@ -57,19 +55,19 @@ dependencies {
     compile files('libs/MobCommons-2016.0303.1229.jar')
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'com.android.support:recyclerview-v7:23.0.3@aar'
-    compile 'com.android.support:design:23.+'
-<<<<<<< HEAD
+
+
     compile files('libs/android-async-http-1.4.6.jar')
     compile files('libs/qiniu-android-sdk-7.0.3.jar')
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile files('libs/ShareSDK-Core-2.7.2.jar')
-=======
+
     compile files('libs/BmobPay_v2.7_160427.jar')
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.android.support:palette-v7:23.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:design:23+'
+    compile 'com.android.support:cardview-v7:23+'
+
+    compile 'com.android.support:palette-v7:23+'
+    compile 'com.android.support:support-v4:23+'
     compile files('libs/jpush-android-2.1.5.jar')
->>>>>>> 42c3d4d3b7d314f110699972472a68eb9d124c62
+
 }
