--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.acer.zzia_mxbt"
     android:versionCode="205"
-    android:versionName="2.0.5"
-    >
-    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="23" />
+    android:versionName="2.0.5">
+
+    <uses-sdk
+        android:minSdkVersion="11"
+        android:targetSdkVersion="23" />
     <!-- Required 自定义用来收发消息的相关权限 -->
     <permission
         android:name="com.example.acer.zzia_mxbt.permission.JPUSH_MESSAGE"
         android:protectionLevel="signature" />
 
-    <!-- Required 一些系统要求的权限，如访问网络等-->
+    <!-- Required 一些系统要求的权限，如访问网络等 -->
     <uses-permission android:name="com.example.acer.zzia_mxbt.permission.JPUSH_MESSAGE" />
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -24,7 +26,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
-
     <!-- Optional for location -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
@@ -32,16 +33,15 @@
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 
-
-    <!--第三方支付的权限-->
+    <!-- 第三方支付的权限 -->
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
     <!-- Mob网络权限 -->
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.GET_TASKS" />
-    <!-- 友盟要求 -->
 
+    <!-- 友盟要求 -->
     <application
         android:name=".application.MyApplication"
         android:allowBackup="true"
@@ -49,23 +49,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-<<<<<<< HEAD
-=======
-        <activity android:name=".activity.MainActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
->>>>>>> ee39f3392c57094014cb703193776a99a327c2c7
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
->>>>>>> 363cb125c3016c0ce9f7095c6240069116ad0158
->>>>>>> a014e8143a6f2e2f5edd551526ab687862d6e20d
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -119,28 +106,12 @@
             android:name="UMENG_APPKEY"
             android:value="573329d1e0f55aea7500430f" />
 
-<<<<<<< HEAD
+        <activity android:name=".activity.CenterActivity" />
+        <activity android:name=".activity.ThemeActivity" />
+        <activity android:name=".activity.Write_ReadActivity" />
+        <activity android:name=".activity.ThemeContentActivity" />
 
-=======
-<<<<<<< HEAD
-        <activity android:name=".activity.CenterActivity" />
-        <activity android:name=".activity.ThemeActivity"></activity>
-        <activity android:name=".activity.Write_ReadActivity" />
-        <activity android:name=".activity.ThemeContentActivity" />
-        <activity android:name=".activity.AndWriteContent_Activity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-=======
-<<<<<<< HEAD
-        <activity android:name=".activity.CenterActivity" />
-        <activity android:name=".activity.Write_ReadActivity" />
-        <activity android:name=".activity.ThemeContentActivity" />
-        <activity android:name=".activity.ThemeActivity">
-        </activity>
-        <activity android:name=".activity.AndWriteContent_Activity" />
-=======
->>>>>>> a014e8143a6f2e2f5edd551526ab687862d6e20d
-        <!--第三方支付的activity-->
+        <!-- 第三方支付的activity -->
         <activity
             android:name="c.b.a.A"
             android:configChanges="orientation|keyboardHidden|navigation"
@@ -151,44 +122,32 @@
             android:name="c.b.a.B"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent" />
-
-
-        <activity android:name=".activity.Write_ReadActivity" />
         <activity android:name=".activity.AndWriteContent_Activity" />
-        <activity android:name=".activity.CenterActivity" />
-        <activity android:name=".activity.ThemeActivity"></activity>
-        <activity android:name=".activity.WalletActivity">
->>>>>>> ee39f3392c57094014cb703193776a99a327c2c7
+        <activity android:name=".activity.WalletActivity" />
+        <activity android:name=".activity.EditActivity" />
 
-        </activity>
-<<<<<<< HEAD
-        <activity android:name=".activity.EditActivity"></activity>
-=======
-
-
-        <activity android:name=".activity.ThemeContentActivity"></activity>
-         <!--极光推送集成-->
-        <!-- Required SDK核心功能-->
+        <!-- 极光推送集成 -->
+        <!-- Required SDK核心功能 -->
         <activity
             android:name="cn.jpush.android.ui.PushActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:theme="@android:style/Theme.NoTitleBar"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="cn.jpush.android.ui.PushActivity" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="com.example.acer.zzia_mxbt" />
             </intent-filter>
         </activity>
 
-        <!-- Required SDK核心功能-->
+        <!-- Required SDK核心功能 -->
         <service
             android:name="cn.jpush.android.service.DownloadService"
             android:enabled="true"
-            android:exported="false" >
-        </service>
+            android:exported="false"></service>
 
-        <!-- Required SDK 核心功能-->
+        <!-- Required SDK 核心功能 -->
         <!-- option since 2.0.5 可配置PushService，DaemonService,PushReceiver,AlarmReceiver的android:process参数 将JPush相关组件设置为一个独立进程 -->
         <!-- 如：android:process=":remote" -->
         <service
@@ -200,7 +159,6 @@
                 <action android:name="cn.jpush.android.intent.REPORT" />
                 <action android:name="cn.jpush.android.intent.PushService" />
                 <action android:name="cn.jpush.android.intent.PUSH_TIME" />
-
             </intent-filter>
         </service>
 
@@ -209,19 +167,21 @@
             android:name="cn.jpush.android.service.DaemonService"
             android:enabled="true"
             android:exported="true">
-            <intent-filter >
+            <intent-filter>
                 <action android:name="cn.jpush.android.intent.DaemonService" />
-                <category android:name="com.example.acer.zzia_mxbt"/>
+
+                <category android:name="com.example.acer.zzia_mxbt" />
             </intent-filter>
         </service>
 
-        <!-- Required SDK核心功能-->
+        <!-- Required SDK核心功能 -->
         <receiver
             android:name="cn.jpush.android.service.PushReceiver"
             android:enabled="true"
             android:exported="false">
             <intent-filter android:priority="1000">
-                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY" /> <!--Required 显示通知栏 -->
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY" />
+                <!-- Required 显示通知栏 -->
                 <category android:name="com.example.acer.zzia_mxbt" />
             </intent-filter>
             <intent-filter>
@@ -232,15 +192,17 @@
             <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_ADDED" />
                 <action android:name="android.intent.action.PACKAGE_REMOVED" />
+
                 <data android:scheme="package" />
             </intent-filter>
         </receiver>
 
-        <!-- Required SDK核心功能-->
+        <!-- Required SDK核心功能 -->
         <receiver android:name="cn.jpush.android.service.AlarmReceiver" />
 
-        <!-- User defined. 用户自定义的广播接收器-->
-      <!--  <receiver
+        <!-- User defined. 用户自定义的广播接收器 -->
+        <!--
+        <receiver
             android:name="您自己定义的Receiver"
             android:enabled="true">
             <intent-filter>
@@ -252,13 +214,20 @@
                 <action android:name="cn.jpush.android.intent.CONNECTION" />&lt;!&ndash; 接收网络变化 连接/断开 since 1.6.3 &ndash;&gt;
                 <category android:name="com.example.acer.zzia_mxbt" />
             </intent-filter>
-        </receiver>-->
+        </receiver>
+        -->
+
 
         <!-- Required . Enable it you can get statistics data with channel -->
-        <meta-data android:name="JPUSH_CHANNEL" android:value="developer-default"/>
-        <meta-data android:name="JPUSH_APPKEY" android:value="0df39e6620b17589afd021a6" /> <!-- </>值来自开发者平台取得的AppKey-->
+        <meta-data
+            android:name="JPUSH_CHANNEL"
+            android:value="developer-default" />
+        <meta-data
+            android:name="JPUSH_APPKEY"
+            android:value="0df39e6620b17589afd021a6" />
+        <!-- </>值来自开发者平台取得的AppKey -->
 
->>>>>>> ee39f3392c57094014cb703193776a99a327c2c7
+
     </application>
 
 </manifest>
